--- a/_posts/2018-09-01-数据库安全基础.md
+++ b/_posts/2018-09-01-数据库安全基础.md
@@ -1,19 +1,23 @@
 ---
-title: 数据库安全基础
-tags: Database
+layout:     post
+title:      数据库安全基础
+subtitle:   
+date:       2018-05-05
+author:     BY
+header-img: img/post-bg-kuaidi.jpg
+catalog: true
+tags:
+    - Xcode
+    - iOS
 ---
 
-# 数据库安全基础
-
--------
 
 ## 关系型数据库
 ### Oracle
 ### MSSQL
 ### MYSQL
 
--------
 
 ## 非关系型数据库
 ### Redis
--------
+
