--- a/_posts/2018-10-12-中间件安全基础.md
+++ b/_posts/2018-10-12-中间件安全基础.md
@@ -1,7 +1,13 @@
-
 ---
-title: 中间件安全基础
-tags: 中间件
+layout:     post
+title:      中间件安全基础知识
+subtitle:   中间件安全
+date:       2018-10-12
+author:     BY GhostSnow
+header-img: img/post-bg-kuaidi.jpg
+catalog: true
+tags:
+    - Web
 ---
 # 中间件安全基础
 ## Apache
