--- a/_posts/2018-11-1-Web安全基础.md
+++ b/_posts/2018-11-1-Web安全基础.md
@@ -1,6 +1,17 @@
-# Web安全基础
+---
+layout:     post
+title:      WEB安全基础知识
+subtitle:   web安全
+date:       2018-11-01
+author:     BY GhostSnow
+header-img: img/post-bg-kuaidi.jpg
+catalog: true
+tags:
+    - Xcode
+    - iOS
+---
 
--------
+
 ## HTTP协议
 ### HTTP请求方法
 ### HTTP常见状态码
